--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             02.设置请求头
             xhr.setRequestHeader('Content-Type','application/x-www-form-urlencoded');
             03.设置请求正文
-            xhr.send('name=itcast');//没有任何作用，只是看起来像给后台传
+            xhr.send('name=zs');//没有任何作用，只是看起来像给后台传
             04.监听并处理响应
             xhr.onreadystatechange=function(){
                 if(xhr.readyState==4){
